# back/server/index.js
@@ -7,7 +7,7 @@ import {getAllChapters, getChapterContent} from "./controllers/chapterController
 import {getAllSignCategories, getSignCategory} from "./controllers/signController.js";
 import {
     getAllExerciseCategories,
-    getIncorrectlySolvedQuestion,
+    getIncorrectlySolvedQuestion, getSolution,
     getUnsolvedQuestionByCategory
 } from "./controllers/exerciseController.js";
 import {getUnsolvedQuestionService} from "./services/exerciseServices.js";
@@ -23,5 +23,8 @@ app.get('/api/v1/sign-categories/:id', getSignCategory);
 app.get('/api/v1/exercises/categories', getAllExerciseCategories);
 app.get('/api/v1/exercises/unsolved/:id', getUnsolvedQuestionByCategory);
 app.get('/api/v1/exercises/incorrectly-solved', getIncorrectlySolvedQuestion);
+app.get('/api/v1/exercises/:id/solution', getSolution);
+
+app.post('/api/v1/users/:id/solutions', getAllExerciseCategories);
 
 app.listen(process.env.PORT);
